# getting-started

./: .clang-format  .gitmodules
Microchip/ATSAME54-XPRO/projects/iar/: azure_iot.dep  azure_iot.ewp  azure_iot.ewt
STMicroelectronics/STM32L4_L4+/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/app/: CMakeLists.txt  azure_config.h  main.c
STMicroelectronics/STM32L4_L4+/app/ipc/: ulib_sample.c  ulib_sample.h
STMicroelectronics/STM32L4_L4+/app/ipc/consumers/: my_consumer.c
STMicroelectronics/STM32L4_L4+/app/ipc/producers/cipher_v1i1/: cipher_v1i1.c
STMicroelectronics/STM32L4_L4+/app/ipc/producers/cipher_v2i1/: cipher_v2i1.c
STMicroelectronics/STM32L4_L4+/tools/: rebuild.sh
